home.md: progressive disclosure for the pitches, tables and guide
Each capability pitch keeps a two-to-three sentence hook and folds a
quick example (book-vetted code) underneath a collapsible admonition;
the Path Types and journeys tables fold under a one-paragraph summary;
the Documentation Guide folds one chapter per admonition. What You Get,
Getting Started, the bridge, the Why table and Key Takeaways stay
visible.

README: the bridge diagram declares its text and edge-label colours
through a mermaid init directive, so the labels read against the
coloured boxes whichever theme GitHub renders it in.